@@ -1,33 +1,37 @@
 package fr.nicknqck.scenarios;
 
-import java.util.Arrays;
-
+import lombok.Setter;
 import org.bukkit.ChatColor;
 import org.bukkit.Material;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
 
-public class AntiDrop {
-	
+import java.util.List;
+
+public class AntiDrop extends BasicScenarios{
+
+
+	@Setter
 	private static boolean AntiDrop = true;
-	
-	public static void setAntiDrop(boolean AntiDropt) {
-		AntiDrop = AntiDropt;
+
+	@Override
+	public String getName() {
+		return "Anti-Drop";
 	}
+
 	public static boolean getAntiDrop() {
 		return AntiDrop;
 	}
 	
 	public static String drop() {
-		String a = ChatColor.GOLD+"[ANTI-DROP] "+ChatColor.RESET;
-		return a;
+        return ChatColor.GOLD+"[ANTI-DROP] "+ChatColor.RESET;
 	}
 
 	public static ItemStack getAntiDropButton() {
 		ItemStack stack = new ItemStack(Material.STAINED_CLAY, 1, (byte) 14); // Red
 		ItemMeta meta = stack.getItemMeta();
 		meta.setDisplayName(ChatColor.GOLD+"Activer l'Anti-Drop");
-		meta.setLore(Arrays.asList(ChatColor.DARK_PURPLE+"Active l'Anti-Drop"));
+		meta.setLore(List.of(ChatColor.DARK_PURPLE + "Active l'Anti-Drop"));
 		stack.setItemMeta(meta);
 		return stack;
 	}
@@ -36,7 +40,7 @@ public class AntiDrop {
 		ItemStack stack = new ItemStack(Material.STAINED_CLAY, 1, (byte) 5); // Green
 		ItemMeta meta = stack.getItemMeta();
 		meta.setDisplayName(ChatColor.GOLD+"Désactiver l'Anti-Drop");
-		meta.setLore(Arrays.asList(ChatColor.DARK_PURPLE+"Désactive l'Anti-Drop"));
+		meta.setLore(List.of(ChatColor.DARK_PURPLE + "Désactive l'Anti-Drop"));
 		stack.setItemMeta(meta);
 		return stack;
 	}
