@@ -1,7 +1,7 @@
 package fr.nicknqck.scenarios;
 
-import java.util.Arrays;
-
+import lombok.Getter;
+import lombok.Setter;
 import org.bukkit.ChatColor;
 import org.bukkit.Material;
 import org.bukkit.enchantments.Enchantment;
@@ -9,23 +9,21 @@ import org.bukkit.inventory.ItemFlag;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
 
+import java.util.List;
+
 public class AntiPvP {
 
+	@Getter
+	@Setter
 	private static boolean antipvplobby = true;
-	
-	public static void setantipvplobby(boolean anti) {
-		antipvplobby = anti;
-	}
-	public static boolean isantipvplobby() {
-		return antipvplobby;
-	}
+
 	public static ItemStack getlobbypvp() {
 		ItemStack stack = new ItemStack(Material.STAINED_CLAY, 1, (byte) 5);
 		ItemMeta meta = stack.getItemMeta();
 		meta.addEnchant(Enchantment.DAMAGE_ALL, 1, true);
 		meta.addItemFlags(ItemFlag.HIDE_ENCHANTS);
 		meta.setDisplayName(ChatColor.DARK_PURPLE+"Anti-PvP (Lobby)");
-		meta.setLore(Arrays.asList(ChatColor.GOLD+"Désactiver"));
+		meta.setLore(List.of(ChatColor.GOLD + "Désactiver"));
 		stack.setItemMeta(meta);
 		return stack;
 	}
@@ -34,7 +32,7 @@ public class AntiPvP {
 		ItemStack stack = new ItemStack(Material.STAINED_CLAY, 1, (byte) 14);
 		ItemMeta meta = stack.getItemMeta();
 		meta.setDisplayName(ChatColor.DARK_PURPLE+"Anti-PvP (Lobby)");
-		meta.setLore(Arrays.asList(ChatColor.GOLD+"Activer"));
+		meta.setLore(List.of(ChatColor.GOLD + "Activer"));
 		stack.setItemMeta(meta);
 		return stack;
 	}
